docker/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wellspokn-backend
  labels:
    app: wellspokn-backend
spec:
  selector:
    matchLabels:
      app: wellspokn-backend
  template:
    metadata:
      labels:
        app: wellspokn-backend
    spec:
      containers:
      - name: wellspokn-backend
        image: wellspokn-backend
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
