docker/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wellspokn-frontend
  labels:
    app: wellspokn-frontend
spec:
  selector:
    matchLabels:
      app: wellspokn-frontend
  template:
    metadata:
      labels:
        app: wellspokn-frontend
    spec:
      containers:
      - name: wellspokn-frontend
        image: wellspokn-frontend
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
