docker/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wellspokn-backend-service
spec:
  selector:
    app: wellspokn-backend
  type: NodePort
  ports:
    - nodePort: 30001
      port: 8080
      protocol: TCP
      targetPort: 8080
